# qrcoder

./: CMakeLists.txt  QRCoder.cpp  QRCoder.h  QRCoder.ui  README.md  main.cpp  qrcoder.pro
